2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/tty_email.pm: Fix NAME description

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* man/xml-source/amadmin.8.xml: Add config command
	* man/xml-source/amanda.conf.5.xml (seealso): Add ref to amadmin
	* man/xml-source/amgetconf.8.xml (seealso): Add ref to amadmin

2017-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (write_from_connection_impl,
	  read_to_connection_impl): Do not overflow length

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Check if label match labelstr
	* installcheck/amlabel.pl: Fix

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg: Fix not adding label to tapleist file when
	  creating it

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c: Fix crash if read return -1

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Curinfo/Info.pm: Fix writting the stats line

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/ambackupd.pl: Do incremental backup

2017-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Cleanup.pm: Improvement

2017-03-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Check result of fcntl

2017-03-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/bsd-security.c: Add bsd_stream_pause and bsd_stream_resume
	* common-src/bsdtcp-security.c, common-src/bsdudp-security.c,
	  common-src/krb5-security.c, common-src/local-security.c,
	  common-src/rsh-security.c, common-src/ssh-security.c,
	  common-src/ssl-security.c: Add tcpm_stream_pause and
	  tcpm_stream_resume to declaration
	* common-src/security-util.c (tcpm_stream_pause, tcpm_stream_resume):
	  Add function